html fix security dependency to 6

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
         database-platform: org.hibernate.dialect.MySQL8Dialect
         defer-datasource-initialization: true
         hibernate:
-            ddl-auto: create
+            ddl-auto: update
         open-in-view: false
         properties:
             hibernate:
@@ -40,7 +40,7 @@ spring:
         period: 0
     sql:
         init:
-            mode: always
+            mode: never
     thymeleaf:
         cache: false
         encoding: UTF-8
