--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
 			<version>2.7.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>6.1.5</version>
+			<scope>test</scope>
+		</dependency>
 
     </dependencies>
 
